# ETSNNQT

./: README.md
fruit_classifier/qt_frontend/: CMakeLists.txt  Makefile
fruit_classifier/qt_frontend/include/: mainwindow.h  plotwidget.h
fruit_classifier/qt_frontend/src/: mainwindow.cpp  plotwidget.cpp
fruit_classifier/qt_frontend/ui/: mainwindow.ui
fruit_classifier/rust_backend/: Cargo.toml
fruit_classifier/rust_backend/dataset/: fruits_dataset.csv
fruit_classifier/rust_backend/src/: lib.rs  main.rs  model.rs  training.rs
knn1/: Cargo.toml  dataset.csv  dataset.csv.save
knn1/src/: main.rs
lookup/: Cargo.toml
lookup/src/: main  main.rs
nn1/: Cargo.toml  dataset.csv
nn1/src/: main.rs
nnqt/: Cargo.toml  README.md  RTC MINGGU 6 NN.txt  dataset.csv
nnqt/classification_results/: results.txt
nnqt/src/: dataset.rs  evaluation.rs  main.rs  model.rs  visualization.rs
nnqtnew/: Cargo.toml
nnqtnew/src/: data.rs  main.rs  model.rs  plot.rs  train.rs
svm1/: Cargo.toml  dataset.csv
svm1/src/: main.rs
ttaylor/: Cargo.toml
ttaylor/src/: main  main.rs
